--- a/frontend/app/styles/post.css
+++ b/frontend/app/styles/post.css
@@ -120,6 +120,66 @@
 }
 
 
+
+.share-with-users {
+  margin-top: 1rem;
+}
+
+.share-with-label {
+  font-size: 0.95rem;
+  color: var(--text-primary);
+  margin-bottom: 0.5rem;
+}
+
+.user-checkbox-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: var(--card-bg);
+  padding: 0.75rem;
+  border: 1px solid var(--border-color);
+  border-radius: 6px;
+  max-height: 200px;
+  overflow-y: scroll;
+}
+
+.user-checkbox-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 1rem 0.5rem;
+  font-size: 0.9rem;
+  color: var(--text-secondary);
+  background-color: var(--bg-color);
+  border-radius: 5px;
+}
+
+.user-checkbox-item input[type="checkbox"] {
+  accent-color: var(--accent-color);
+  width: 16px;
+  height: 16px;
+}
+
+.user-checkbox-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.user-checkbox-list::-webkit-scrollbar-track {
+  background: var(--scrollbar-bg);
+  border-radius: 8px;
+}
+
+.user-checkbox-list::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb);
+  border-radius: 8px;
+  border: 2px solid var(--scrollbar-bg);
+}
+
+.user-checkbox-list::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent-hover);
+}
+
 /* =======================POSTS SECTION ======================== */
 
 
