--- a/frontend/app/styles/post.css
+++ b/frontend/app/styles/post.css
@@ -143,7 +143,7 @@
   overflow-y: scroll;
 }
 
-.user-checkbox-item{
+.user-checkbox-item > #follower-checkbox-label{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -205,7 +205,7 @@
   box-shadow: 0 6px 16px var(--shadow-color);
 }
 
-.post-card .post-meta {
+ .post-meta {
   display: flex;
   align-items: center;
   gap: 0.75rem;
@@ -213,11 +213,11 @@
   color: var(--text-secondary);
 }
 
-.post-card .avatar {
+.post-meta .post-avatar {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit:contain;
   border: 2px solid var(--accent-color);
 }
 
