--- a/frontend/app/styles/chat.css
+++ b/frontend/app/styles/chat.css
@@ -218,6 +218,7 @@
 
 .chatBody .sender {
   display: flex;
+    word-break: break-all;
 }
 
 .chatBody > div p {
@@ -232,6 +233,7 @@
 .chatBody .receiver {
   display: flex;
   justify-content: end;
+    word-break: break-all;
 }
 
 .chatBody .receiver p {
