--- a/frontend/app/styles/profile.css
+++ b/frontend/app/styles/profile.css
@@ -236,11 +236,12 @@ input:checked+.slider:before {
 
 .data-profile {
     width: 100%;
-    min-height: 520px;
-    max-height: 600px;
+
     background-color: var(--card-bg);
     box-sizing: border-box;
     overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
 }
 
 .data-profile .Forbiden {
@@ -419,14 +420,13 @@ input:checked+.slider:before {
 
 .relation-section {
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    min-height: 200px;
+    max-height: 220px;
     display: flex;
     gap: 20px;
-    padding: 10px;
+    padding: 30px 10px;
     justify-content: space-evenly;
     overflow-y: auto;
-
     a {
         border: 1px solid var(--border-color);
         border-radius: 8px;
