--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("./styles/post.css");
 @import url("./styles/footer.css");
 @import url("./styles/header.css");
@@ -7,6 +7,7 @@
 @import url("./styles/chat.css");
 @import url("./styles/login.css");
 @import url("./styles/profile.css");
+@import url("./styles/groups.css");
 
 :root {
   --bg-color: #12111a;
@@ -37,7 +38,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", system-ui;
 }
 
 body {
@@ -60,6 +61,7 @@ main {
   width: 100%;
   min-height: 100vh;
   padding: 120px 20px;
+  padding-bottom: 0;
 }
 
 svg {
