--- a/frontend/styles/request.css
+++ b/frontend/styles/request.css
@@ -34,11 +34,11 @@
     padding: 20px 10px;
     transition: .5s ease-in-out;
 
-    box-shadow: var(--accent-hover) 0px 1px 3px, var(--accent-hover) 0px 1px 2px;
+    box-shadow: var(--shadow-color) 0px 1px 3px, var(--shadow-color) 0px 1px 2px;
 }
 
 .hide {
-    transform: translateX(100%);
+    transform: translateX(110%);
 }
 
 .show {
@@ -152,7 +152,8 @@
 .follower-request:hover {
     background-color: var(--card-bg);
 }
-.noReq{
+
+.noReq {
     color: var(--text-muted);
     text-align: center;
 }
