--- a/frontend/styles/groups.css
+++ b/frontend/styles/groups.css
@@ -101,11 +101,13 @@
     flex-direction: column;
 }
 
-.joinedGroups li {
+.joinedGroups li a{
     padding: 15px 30px;
     display: flex;
     align-items: center;
     gap: 15px;
+    color: var(--text-primary);
+    text-decoration: none;
 }
 
 .joinedGroups li:hover {
