--- a/frontend/styles/request.css
+++ b/frontend/styles/request.css
@@ -157,3 +157,34 @@
     color: var(--text-muted);
     text-align: center;
 }
+
+.NotifToast {
+    position: absolute;
+    bottom: 50px;
+    left: 30px;
+    width: max-content;
+    height: 80px;
+    background-color: var(--btn-bg);
+    border-radius: 8px;
+    border: 1px solid var(--border-color);
+    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
+    padding: 16px;
+    display: flex;
+    gap: 15px;
+
+    svg {
+        height: 19px;
+    }
+
+    div {
+        p {
+            color: var(--text-muted);
+            margin-top: 5px;
+            font-size: 14px;
+        }
+        h3{
+            font-size: 14px;
+            font-weight: 500;
+        }
+    }
+}
